--- a/Proyecto Progra II/appsettings.json
+++ b/Proyecto Progra II/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=localhost; DataBase=API; Trusted_Connection=True; TrustServerCertificate=True;"
+  "JwtSettings": {
+    "key": "Supercalifragisdisticoespiralidoso_Otorr1n0Lagqn9olo90"
+  }
 }
