--- a/Proyecto Progra II/appsettings.json
+++ b/Proyecto Progra II/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=localhost; DataBase=API; Trusted_Connection=True; TrustServerCertificate=True;"
+  "ConnectionString": "Server=localhost; DataBase=API; Trusted_Connection=True; TrustServerCertificate=True;",
   "JwtSettings": {
     "key": "Supercalifragisdisticoespiralidoso_Otorr1n0Lagqn9olo90"
   }
