update db connection

--- a/Proyecto Progra II/appsettings.json
+++ b/Proyecto Progra II/appsettings.json
@@ -1,13 +1,16 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": 
+    {
+      "sql": "Server=localhost; DataBase=API; Trusted_Connection=True; TrustServerCertificate=True;"
+    },
+  "JwtSettings": {
+    "key": "Supercalifragisdisticoespiralidoso_Otorr1n0Lagqn9olo90"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionString": "Server=localhost; DataBase=API; Trusted_Connection=True; TrustServerCertificate=True;",
-  "JwtSettings": {
-    "key": "Supercalifragisdisticoespiralidoso_Otorr1n0Lagqn9olo90"
   }
 }
