add email notification

--- a/Proyecto Progra II/appsettings.json
+++ b/Proyecto Progra II/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "SmtpSettings": {
+    "Server" :  "smtp.gmail.com",
+    "Port": 587,
+    "Username": "no.reply.atlasclinic@gmail.com",
+    "Password": "ezpgmngxxbihrbzb"
+  },
   "AllowedHosts": "*",
-  "ConnectionStrings": 
-    {
-      "sql": "Server=localhost; DataBase=API; Trusted_Connection=True; TrustServerCertificate=True;"
-    },
+  "ConnectionStrings": {
+    "sql": "Server=localhost; DataBase=API; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
   "JwtSettings": {
     "key": "Supercalifragisdisticoespiralidoso_Otorr1n0Lagqn9olo90"
   },
